Removed transition from Contact background image - prevents white gap from displaying on page resize

--- a/css/ccc.css
+++ b/css/ccc.css
@@ -223,7 +223,6 @@ a.accordion-link
     background-size: cover;
     height: 100vh;
     border: 1px solid #DDD;
-    transition: all 1.0s ease;
     position: relative;
 }
 #c-content
